--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.5.1",
     "concurrently": "3.0.0",
+    "node-sass": "^3.10.1",
+    "postcss-cli": "^2.6.0",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
@@ -15,11 +18,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch": "concurrently --names 'webpack, stylus' --prefix name 'npm run start' 'npm run styles:watch'",
+    "watch": "concurrently --names 'webpack, sass, postcss' --prefix name 'npm run start' 'npm run sass:watch' 'npm run postcss:watch'",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
-    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css"
+    "sass": "node-sass --recursive --output src/css --source-map true --source-map-contents src/sass",
+    "sass:watch": "node-sass --watch --recursive --output src/css --source-map true --source-map-contents src/sass",
+    "postcss": "postcss -u autoprefixer -o src/css/main3.css src/css/main2.css",
+    "postcss:watch": "postcss -w -u autoprefixer -o src/css/main3.css src/css/main2.css"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
