--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "concurrently": "3.0.0",
+    "lodash": "^4.16.4",
     "node-sass": "^3.10.1",
     "postcss-cli": "^2.6.0",
     "react-scripts": "0.6.1"
