--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.16.4",
     "node-sass": "^3.10.1",
     "postcss-cli": "^2.6.0",
+    "re-base": "^2.2.0",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
